<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:grid="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rmuti.project.dogfeeder.screen.ScreenMain">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <include layout="@layout/toolbar" />
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:id="@+id/container_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appbar">

        <RelativeLayout
            android:id="@+id/video_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/control_layout"
            android:layout_alignParentTop="true">

            <WebView
                android:id="@+id/stream_view"
                android:layout_width="match_parent"
                android:layout_height="256dp"
                android:layout_centerInParent="true"
                android:background="@color/Dividers_White" />

            <ProgressBar
                android:id="@+id/progress_image"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:indeterminate="false"
                android:visibility="gone" />
        </RelativeLayout>


        <android.support.v7.widget.GridLayout
            android:id="@+id/control_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            grid:alignmentMode="alignBounds"
            grid:columnCount="3"
            grid:rowCount="2"
            grid:rowOrderPreserved="false"
            grid:useDefaultMargins="true">

            <RelativeLayout
                android:id="@+id/layout_auto_food"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/effect_btn_control"
                android:clickable="true"
                android:gravity="center"
                grid:layout_columnWeight="1"
                grid:layout_gravity="fill_horizontal">

                <ImageView
                    android:id="@+id/imv_auto_food"
                    android:layout_width="@dimen/size_btn_control"
                    android:layout_height="@dimen/size_btn_control"
                    android:layout_centerHorizontal="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_auto_food" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imv_auto_food"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/PaddingSpace2"
                    android:text="@string/auto_food" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_dog_feeder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/effect_btn_control"
                android:clickable="true"
                android:gravity="center"
                grid:layout_columnWeight="1"
                grid:layout_gravity="fill_horizontal">

                <ImageView
                    android:id="@+id/imv_dog_feeder"
                    android:layout_width="@dimen/size_btn_control"
                    android:layout_height="@dimen/size_btn_control"
                    android:layout_centerHorizontal="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_give_food" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imv_dog_feeder"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/PaddingSpace2"
                    android:text="@string/dog_feeder" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_dog_water"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/effect_btn_control"
                android:clickable="true"
                android:gravity="center"
                grid:layout_columnWeight="1"
                grid:layout_gravity="fill_horizontal">

                <ImageView
                    android:id="@+id/imv_dog_water"
                    android:layout_width="@dimen/size_btn_control"
                    android:layout_height="@dimen/size_btn_control"
                    android:layout_centerHorizontal="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_water" />

                <TextView
                    android:id="@+id/tv_slat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imv_dog_water"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/PaddingSpace2"
                    android:text="@string/water" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_capture"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/effect_btn_control"
                android:clickable="true"
                android:gravity="center"
                grid:layout_columnWeight="1"
                grid:layout_gravity="fill_horizontal">

                <ImageView
                    android:id="@+id/imv_capture"
                    android:layout_width="@dimen/size_btn_control"
                    android:layout_height="@dimen/size_btn_control"
                    android:layout_centerHorizontal="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_capture" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imv_capture"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/PaddingSpace2"
                    android:text="@string/capture" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_set_quality_video"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/effect_btn_control"
                android:clickable="true"
                android:gravity="center"
                grid:layout_columnWeight="1"
                grid:layout_gravity="fill_horizontal">

                <ImageView
                    android:id="@+id/imv_set_quality_video"
                    android:layout_width="@dimen/size_btn_control"
                    android:layout_height="@dimen/size_btn_control"
                    android:layout_centerHorizontal="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_hd" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imv_set_quality_video"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/PaddingSpace2"
                    android:text="@string/quality" />
            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/layout_setting_ip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/effect_btn_control"
                android:clickable="true"
                android:gravity="center"
                grid:layout_columnWeight="1"
                grid:layout_gravity="fill_horizontal">

                <ImageView
                    android:id="@+id/imv_setting"
                    android:layout_width="@dimen/size_btn_control"
                    android:layout_height="@dimen/size_btn_control"
                    android:layout_centerHorizontal="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_setting" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imv_setting"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/PaddingSpace2"
                    android:text="@string/set_ip" />
            </RelativeLayout>

        </android.support.v7.widget.GridLayout>

    </RelativeLayout>


</RelativeLayout>
